--- a/three_responsive_scenes/src/scss/nav.scss
+++ b/three_responsive_scenes/src/scss/nav.scss
@@ -1,15 +1,20 @@
 /*------ABOUT-SEE MORE---------- */
 .header-container {
+  width: 100vw;
   height: 100vh;
-  margin: auto;
-  overflow-x: hidden;
+
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  border-top: 0px solid #000;
-  border-bottom: 0px solid #000;
-  background-color: #fff;
+  //
+
+  //
+  //
+  background-image: url(../images/garabato_onblanc1.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 
   nav {
     list-style-type: none;
@@ -60,13 +65,18 @@
   /* ------ */
   .texto-dos {
     position: absolute;
-    top: 23%;
+    top: 50%;
     left: 50%;
+    transform: translate(-50%, -50%);
+    //
+
+    // -webkit-text-stroke: 1px rgb(255, 255, 255);
+    // -webkit-text-fill-color: transparent;
     text-align: center;
     line-height: 59px;
     font-size: 3.6rem;
     letter-spacing: 2px;
-    transform: translate(-50%, -50%);
+
     font-family: "Poppins-light";
   }
 
@@ -78,5 +88,43 @@
     width: 200px;
     transform: translate(-50%, -50%);
     border: 5px solid #000;
+  }
+  //
+  //
+  //
+
+  .flagZoomBox {
+    width: 90%;
+    margin: 0 5%;
+    background: transparent;
+    text-align: center;
+    max-width: 900px;
+    border-radius: 5px;
+    overflow: hidden;
+    margin-bottom: 20px;
+  }
+
+  .button-cube-original-zoom {
+    background-color: yellow;
+
+    p {
+      color: red;
+    }
+    button.btn-zoom-original {
+      background: gray;
+      color: white;
+      margin: 20px;
+      border: 0;
+      border-radius: 2px;
+      padding: 6px 12px;
+      cursor: pointer;
+      transition: background 0.3s ease-in-out;
+    }
+    button:hover {
+      background: dimgray;
+    }
+    :focus {
+      outline: none;
+    }
   }
 }
