--- a/various-geomatries-lights/src/scss/Cube.scss
+++ b/various-geomatries-lights/src/scss/Cube.scss
@@ -143,3 +143,23 @@ button:hover {
 //
 //
 //
+.cubeLight-wrapper {
+  margin: 0;
+  overflow: hidden;
+  background-color: rgb(140, 167, 138);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font: 12px sans-serif;
+  .CubeLight {
+    width: 90%;
+    margin: 0 5%;
+    text-align: center;
+    max-width: 800px;
+    border-radius: 5px;
+    overflow: hidden;
+    margin-bottom: 20px;
+    border: 5px solid #000;
+  }
+}
