reame lughts part 0

--- a/various-geomatries-lights/src/scss/Cube.scss
+++ b/various-geomatries-lights/src/scss/Cube.scss
@@ -144,6 +144,7 @@ button:hover {
 //
 //
 .cubeLight-wrapper {
+  height: 100vh;
   margin: 0;
   overflow: hidden;
   background-color: rgb(140, 167, 138);
